# os

./: .gitignore
addressBook/: CMakeLists.txt  benchmark.c  benchmark.h  data.csv  gdb.txt  makefile  results.txt  timer.c  timer.h
addressBook/libAddressBook/: CMakeLists.txt  addressBook.h  contact.c  contact.h  listAddressBook.h  makefile  treeAddressBook.c  treeAddressBook.h
addressBook/libaddressbook/: CMakeLists.txt  contact.c  contact.h  listAddressBook.c  makefile  treeAddressBook.c
alphasig/: CMakeLists.txt  Makefile  main.c
barberqueue/: CMakeLists.txt  Makefile  barber.c  barbershop.h  mothership.c  waitingRoomQueue.c  waitingRoomQueue.h
barberqueue/libconcurrent/: concurrent.h  condition.c  condition.h  lock.c  lock.h  semaphore.c  semaphore.h  utils.c  utils.h
barberqueue/liblogger/: logger.c  logger.h
barberqueue/libsafe/: safeExit.c  safeExit.h  safeIO.c  safeIO.h  safeIpc.c  safeIpc.h  safeSignal.c
centrallyPlannedEconomy/: CMakeLists.txt  Makefile  centralCommittee.c  centralCommittee.h  executiveOrders.h  regionalCommittee.c
centrallyPlannedEconomy/libhashmap/: hashMap.c  hashMap.h
centrallyPlannedEconomy/libsafe/: safeIO.c  safeIO.h
copyRight/: CMakeLists.txt  Client.cpp  Client.h  Metadata.cpp  Metadata.h  ServerAddress.cpp  ServerAddress.h  clientExample.cpp  dataGen.py  dataVer.py  main.cpp  serverExample.cpp
dinner/: CMakeLists.txt  Makefile  main.c
fileInfo/: CMakeLists.txt  Makefile  main.c
flockLock/: CMakeLists.txt  Makefile  main.c  main.h
gandalf/: CMakeLists.txt  Makefile  main.c
gandalf/libarrayqueue/: arrayQueue.c  arrayQueue.h
helpdesk/: CMakeLists.txt  clerk.c  clerk.h  protocol.c  protocol.h  worker.c
helpdesk/libarrayqueue/: arrayQueue.c
helpdesk/liblinkedlist/: linkedList.c  linkedList.h
helpdesk/liblogger/: logger.c  logger.h
helpdesk/libsafe/: safe.h  safeAlloc.c  safeExit.h  safeFork.h  safeIO.c  safeIpc.c
ioBenchmark/: CMakeLists.txt  Makefile  ioBenchmark.c  ioBenchmark.h  safeAlloc.c  safeAlloc.h  safeFile.c  safeFile.h  wyniki.txt
ioBenchmark/libsafealloc/: safeAlloc.c  safeAlloc.h
ioBenchmark/libsafefile/: safeFile.h
masterplan/: CMakeLists.txt  Makefile  config.h  oasis.c  plan.c
masterplan/libsafe/: safe.h
needles/: CMakeLists.txt  Makefile  sewer.c  sewer.h
needles/libsafe/: safeExit.h  safeSignal.h
scripe/: CMakeLists.txt  Makefile  environTester.c  main.c  main.h  scripet  timeLimitTester.c
scripe/libhashmap/: hashmap.c  hashmap.h
scripe/libhashset/: libhashset.c  libhashset.h
scripe/liblinkedlist/: linkedList.c  linkedList.h
scripe/libsafe/: safeIO.c  safeIO.h
spindle/: CMakeLists.txt  spindle.c
spindle/libarrayqueue/: arrayQueue.h
spindle/liblogger/: logger.h
spindle/libsafe/: safeAlloc.h  safeExit.c  safeExit.h
thimble/: CMakeLists.txt  Makefile  thimble.c  zad2.raport
thimble/liblogger/: logger.c
thimble/libsafe/: safeExit.c  safeFork.c
